--- a/redux-example/.vscode/settings.json
+++ b/redux-example/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "emmet.triggerExpansionOnTab": true
+    "emmet.triggerExpansionOnTab": true,
+    "emmet.includeLanguages": {
+        "javascript": "javascriptreact"
+    }
 }
